--- a/server/views/content/books/list.ejs
+++ b/server/views/content/books/list.ejs
@@ -7,7 +7,7 @@
             <!-- ------------------------ -->
             <!-- FIX THE ADD BUTTON BELOW -->
             <!-- ------------------------ -->
-            <a href="/book-add" class="btn btn-primary" role="button">
+            <a href="/books/add" class="btn btn-primary" role="button">
                 <i class="fas fa-plus-circle"></i> Add a Book</a>
             <br>
             <table class="table table-bordered table-striped table-hover">
@@ -45,7 +45,7 @@
                             <!-- ------------------------ -->
                             <!-- ADD the EDIT BUTTON HERE -->
                             <!-- ------------------------ -->
-                            <a href="/book-edit/<%= books[count]._id %>"
+                            <a href="/books/edit/<%= books[count]._id %>"
                                 class="btn btn-primary btn-sm">
                             <i class="fas fa-pencil-alt"></i>Edit</a>
                         </td>
@@ -53,7 +53,7 @@
                             <!-- ------------------------ -->
                             <!-- ADD the DELETE BUTTON HERE -->
                             <!-- ------------------------ -->
-                            <a href="/book-delete/<%= books[count]._id %>"
+                            <a href="/books/delete/<%= books[count]._id %>"
                                 class="btn btn-danger btn-sm">
                             <i class="fas fa-trash-alt"></i>Delete</a>
                         </td>
